--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,17 @@
+:root{
+  --background-color: black;
+  --text-color: white;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  background-color: var(--background-color);
+  color: var(--text-color);
+  }
 
 a {
   color: inherit;
